--- a/index.html
+++ b/index.html
@@ -250,14 +250,19 @@
       pointer-events: none;
       will-change: transform, filter;
     }
+    /* ΠΙΟ LIGHT vignette στο background */
     .bg-blur::after{
       content:"";
-      position:absolute; inset:0;
-      background: radial-gradient(120% 90% at 50% 45%,
-        rgba(0,0,0,0.00) 0%, rgba(0,0,0,0.18) 60%, rgba(0,0,0,0.45) 100%);
-      mix-blend-mode: multiply;
+      position: absolute; inset: 0;
+      background:
+        radial-gradient(120% 90% at 50% 45%,
+          rgba(0,0,0,0.00) 0%,
+          rgba(0,0,0,0.12) 62%,
+          rgba(0,0,0,0.25) 100%);
       pointer-events: none;
+      mix-blend-mode: multiply;
     }
+
     body::before{
       content:"";
       position: fixed; inset: 0;
@@ -389,15 +394,18 @@ body.open .letter-wrap{
 
 /* 5) Highlight στο πάνω χείλος (σαν λάμψη/ανάγλυφο) */
 .envelope-wrap::before,
+/* ΠΙΟ ΗΠΙΟ edge vignette στο γράμμα */
 .letter-wrap::before{
-  content:"";
-  position:absolute; inset:0;
-  background: linear-gradient(to bottom,
-              rgba(255,255,255,.20), rgba(255,255,255,0) 18%);
-  mix-blend-mode: screen;
-  opacity: .35;
+  content: "";
+  position: absolute;
+  inset: 0;
+  box-shadow:
+    inset 0 0 50px rgba(0,0,0,.12),  /* από .18 → .12 */
+    inset 0 0 1px rgba(255,255,255,.30);
   pointer-events: none;
+  z-index: 0;
 }
+
 body.open .envelope-wrap::before{ opacity: 0; }   /* κρύψε όταν ανοίγει */
 body:not(.open) .letter-wrap::before{ opacity: 0; } /* κρύψε όταν είναι κλειστό */
 
@@ -536,6 +544,7 @@ body:not(.open) .envelope-wrap{
   </script>
 </body>
 </html>
+
 
 
 
