--- a/index.html
+++ b/index.html
@@ -434,6 +434,38 @@ body:not(.open) .envelope-wrap{
   transform: translateX(-304px)
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    /* 1) Σβήσε όλα τα shadows/filters σε envelope/letter/κείμενα */
+.envelope-wrap img,
+.letter-wrap,
+.letter-title, .headmaster-name, .headmaster-quals, .letter-body, .footer{
+  filter: none !important;
+  box-shadow: none !important;
+  text-shadow: none !important;
+}
+
+/* 2) Κάνε αόρατα τα overlays (watermark/vignette) για να μη σκοτεινιάζει τίποτα */
+.letter-wrap::before,
+.letter-wrap::after,
+.bg-blur::after{
+  opacity: 0 !important;
+}
+
   </style>
 </head>
 
@@ -544,6 +576,7 @@ body:not(.open) .envelope-wrap{
   </script>
 </body>
 </html>
+
 
 
 
