--- a/index.html
+++ b/index.html
@@ -459,13 +459,13 @@ body:not(.open) .envelope-wrap{
   text-shadow: none !important;
 }
 
-/* 2) Κάνε αόρατα τα overlays (watermark/vignette) για να μη σκοτεινιάζει τίποτα */
-.letter-wrap::before,
+/* /* 2) Κάνε αόρατα τα overlays (watermark/vignette) για να μη σκοτεινιάζει τίποτα */
+/* .letter-wrap::before,
 .letter-wrap::after,
 .bg-blur::after{
   opacity: 0 !important;
-}
-
+} */
+ */
   </style>
 </head>
 
@@ -576,6 +576,7 @@ body:not(.open) .envelope-wrap{
   </script>
 </body>
 </html>
+
 
 
 
