--- a/index.html
+++ b/index.html
@@ -460,11 +460,24 @@ body:not(.open) .envelope-wrap{
 }
 
 /* /* 2) Κάνε αόρατα τα overlays (watermark/vignette) για να μη σκοτεινιάζει τίποτα */
-/* .letter-wrap::before,
+.letter-wrap::before,
 .letter-wrap::after,
 .bg-blur::after{
   opacity: 0 !important;
-} */
+}
+
+  /* 1) Δείξε σίγουρα την περγαμηνή (ακόμα κι αν έχουμε overrides) */
+.letter-wrap{
+  background:
+    url("images/parchment.png?v=2") center/cover no-repeat,
+    #f2e6c8 !important;   /* υπόστρωμα μπεζ σε περίπτωση διαφάνειας */
+}
+
+/* 2) Για δοκιμή: βεβαιώσου ότι το γράμμα φαίνεται όταν ανοίγει */
+body.open .letter-wrap{ opacity: 1 !important; }
+
+/* (προαιρετικά για debugging) δες το γράμμα ακόμη κι όταν είναι κλειστός ο φάκελος */
+// body:not(.open) .letter-wrap{ opacity: 1 !important; }
  */
   </style>
 </head>
@@ -576,6 +589,7 @@ body:not(.open) .envelope-wrap{
   </script>
 </body>
 </html>
+
 
 
 
