--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@ body:not(.open) .envelope-wrap{
   /* 1) Δείξε σίγουρα την περγαμηνή (ακόμα κι αν έχουμε overrides) */
 .letter-wrap{
   background:
-    url("images/parchment.png?v=2") center/cover no-repeat,
-    #f2e6c8 !important;   /* υπόστρωμα μπεζ σε περίπτωση διαφάνειας */
+    url("images/parchment.png") center/cover no-repeat,
+       /* υπόστρωμα μπεζ σε περίπτωση διαφάνειας */
 }
 
 /* 2) Για δοκιμή: βεβαιώσου ότι το γράμμα φαίνεται όταν ανοίγει */
@@ -589,6 +589,7 @@ body.open .letter-wrap{ opacity: 1 !important; }
   </script>
 </body>
 </html>
+
 
 
 
