--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>Hogwarts Invitation</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+x
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=IM+Fell+English:ital@0;1&family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
@@ -475,6 +477,62 @@ body:not(.open) .envelope-wrap{
   .sig-badge{ width: 72px; transform: translateX(0); }
 }
 
+/* ==== MOBILE FIX (≤ 900px) ==== */
+@media (max-width: 900px){
+
+  :root{
+    --letter-scale: 1;     /* δεν θέλουμε scale στο γράμμα */
+    --pad-open: 8px;
+    --inner-col-max: 92vw;
+  }
+
+  /* Φάκελος κλειστός – σωστό κέντρο/scale στο mobile */
+  body:not(.open) .envelope-wrap{
+    transform: translate(-50%, -50%) scale(.92) rotateX(0) rotateZ(0) !important;
+  }
+
+  /* Γράμμα: δώσε πραγματικό πλάτος οθόνης και ακύρωσε το transform του open */
+  .letter-wrap,
+  body.open .letter-wrap{
+    width: 94vw;
+    height: auto;
+    aspect-ratio: 2000 / 3800;             /* κρατάει αναλογία περγαμηνής */
+    transform: translateX(-50%) scale(1) rotate(0) !important;
+    background-size: 100% 100%;
+    box-shadow: none;
+    filter: drop-shadow(0 12px 18px rgba(0,0,0,.28));
+  }
+
+  .letter-inner{
+    margin: 20px auto;
+    padding-top: 16px;
+    font-size: 20px;
+    line-height: 1.4;
+  }
+
+  .letter-title .title-line1,
+  .letter-title .title-line2{ font-size: 8vw; } /* responsive τίτλος */
+
+  .headmaster-name{ font-size: 18px; letter-spacing: .2em; padding-top: 20px; }
+  .headmaster-quals{ font-size: 16px; line-height: 1.35; }
+
+  .letter-body{
+    font-size: 20px;
+    max-width: 60ch;
+    margin-top: 20px;
+    padding-top: 16px;
+  }
+
+  .signature{
+    font-size: 36px;
+    transform: translateX(0) translateY(0) rotate(-10deg) !important;
+  }
+
+  .sig-badge{
+    width: 72px;
+    transform: translateX(0) !important;
+  }
+}
 
   </style>
 </head>
@@ -594,6 +652,7 @@ body:not(.open) .envelope-wrap{
 
 </body>
 </html>
+
 
 
 
