--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@ html { -webkit-text-size-adjust: 100%; text-size-adjust: 100%; }
              <b>Location: Skopelou 1, Kypseli, 1st floor</b></p><br>
           <p>You will find Butterbeer, enchanting treats, and magical surprises awaiting your arrival. Wands and wizarding robes are most welcome.</p><br>
           <p>Muggles are kindly requested to wear black.</p><br>
-          <p>We await your owl (or RSVP) at the earliest convenience.</p><br>
+          <p>We await your owl (or RSVP) by 15/10 at the latest.</p><br>
 
           <p>Yours sincerely,</p>
           <div class="signature">Minerva McGonagall</div>
@@ -771,6 +771,7 @@ html { -webkit-text-size-adjust: 100%; text-size-adjust: 100%; }
 
 </body>
 </html>
+
 
 
 
