--- a/index.html
+++ b/index.html
@@ -1,6 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
+    <!-- Primary meta -->
+  <title>Tiffany's Birthday Party – Hogwarts Invitation</title>
+  <meta name="description" content="You are invited to Tiffany's Harry Potter-themed birthday party. Open the envelope to reveal your letter.">
+  
+  <!-- Open Graph / Facebook / WhatsApp / iMessage -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Tiffany's Birthday Party Invitation Letter">
+  <meta property="og:description" content="A magical invitation awaits. Click the envelope to open your Hogwarts letter.">
+  <meta property="og:url" content="https://hp-birthday-party.vercel.app/">
+  <meta property="og:image" content="https://hp-birthday-party.vercel.app/og-image.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Tiffany's Birthday Party Invitation Letter">
+  <meta name="twitter:description" content="A magical invitation awaits. Click the envelope to open your Hogwarts letter.">
+  <meta name="twitter:image" content="https://hp-birthday-party.vercel.app/og-image.jpg">
+  
+  <!-- Optional niceties -->
+  <link rel="canonical" href="https://hp-birthday-party.vercel.app/">
+  <link rel="icon" href="/favicon.ico">
+  <meta name="theme-color" content="#0a0a0a">
+
+  
+
+  
   <meta charset="UTF-8" />
   <title>Hogwarts Invitation</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
@@ -771,6 +800,7 @@ html { -webkit-text-size-adjust: 100%; text-size-adjust: 100%; }
 
 </body>
 </html>
+
 
 
 
