--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     
     <!-- Open Graph (WhatsApp, FB, iMessage, etc.) -->
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Tiffany’s Birthday Party — Invitation Letter">
-    <meta property="og:description" content="A magical invitation awaits. Click the envelope to open your Hogwarts letter.">
+    <meta property="og:title" content="Tiffany’s Birthday Party — Invitation">
+    <meta property="og:description" content="You are invited to Tiffany’s Harry Potter–themed birthday party. Open the envelope to reveal your letter.">
     <meta property="og:url" content="https://hp-birthday-party.vercel.app/">
     <meta property="og:image" content="https://loukasdimitrios.github.io/HP-Birthday-Party/images/og-image.jpg?v=1">
     <meta property="og:image:width" content="1200">
@@ -800,6 +800,7 @@ html { -webkit-text-size-adjust: 100%; text-size-adjust: 100%; }
 
 </body>
 </html>
+
 
 
 
